--- a/test/_config.yml
+++ b/test/_config.yml
@@ -91,10 +91,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Mainak Sarkar"
   avatar           : "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "First-Year PhD in **Computer Science** at Texas A&M"
+  location         : "Bryan, TX, USA"
   links:
     - label: "Your Website"
       icon: "fas fa-fw fa-link"
